test/corpus/basic_html.txt

================================================================================
Simple HTML element
================================================================================

<div>Hello</div>

--------------------------------------------------------------------------------

(template
  (html_element
    (start_tag
      (tag_name))
    (html_content
      (text))
    (end_tag
      (tag_name))))
